--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -30,6 +30,7 @@
       <label for="email">Email Address</label>
       <textarea name="message" id="message" placeholder="Type your message"></textarea>
       <label for="message">Send Message</label>
+      <button type="submit">submit</button>
     </form>
   </main>
   
